[gd_scene load_steps=77 format=3 uid="uid://cahhif8t6eo03"]

[ext_resource type="Texture2D" uid="uid://baaiww6rg2ogv" path="res://reference/knight.png" id="1_gpfj7"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="1_ygmf4"]
[ext_resource type="Script" path="res://scripts/Stats/PlayerStats.gd" id="2_iwdy0"]
[ext_resource type="PackedScene" uid="uid://nyc3ohxqbouq" path="res://scenes/Universal/hurtbox.tscn" id="3_3jhed"]
[ext_resource type="Script" path="res://scripts/Universal/Hitbox.gd" id="5_03dk4"]
[ext_resource type="Script" path="res://scripts/PFSM/PlayerStateMachine.gd" id="6_vlsyt"]
[ext_resource type="Script" path="res://scripts/PFSM/Idle.gd" id="7_qyw7l"]
[ext_resource type="Script" path="res://scripts/PFSM/Run.gd" id="8_5mwc2"]
[ext_resource type="Script" path="res://scripts/PFSM/Blast.gd" id="8_mk7im"]
[ext_resource type="Script" path="res://scripts/PFSM/Melee.gd" id="9_dav7q"]
[ext_resource type="Script" path="res://scripts/PFSM/OnWall.gd" id="10_wy3i6"]
[ext_resource type="Script" path="res://scripts/PFSM/Airborne.gd" id="11_rdxji"]
[ext_resource type="Script" path="res://scripts/PFSM/Dead.gd" id="12_ex2rv"]
[ext_resource type="Script" path="res://scripts/PFSM/Spawn.gd" id="13_scs5x"]
[ext_resource type="Script" path="res://scripts/PFSM/Hit.gd" id="14_fmnic"]
[ext_resource type="Script" path="res://scripts/PFSM/Dash.gd" id="15_mr725"]
[ext_resource type="Script" path="res://scripts/PFSM/Jump.gd" id="15_t8mmb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k43nt"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_enufk"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gajlp"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6n3p"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kemoa"]
atlas = ExtResource("1_gpfj7")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3flo"]
atlas = ExtResource("1_gpfj7")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyq3m"]
atlas = ExtResource("1_gpfj7")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_df7nl"]
atlas = ExtResource("1_gpfj7")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oha4"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fted"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4s75"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqxux"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3n3k"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s2ln"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdrah"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a41rs"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlsod"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdx22"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q33c"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xkg"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8jof"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu42r"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46up1"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfyfb"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpcmq"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0eft"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0arnl"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iqfu"]
atlas = ExtResource("1_gpfj7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dc65"]
atlas = ExtResource("1_gpfj7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgwrh"]
atlas = ExtResource("1_gpfj7")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8py5"]
atlas = ExtResource("1_gpfj7")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4etc6"]
atlas = ExtResource("1_gpfj7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nipqu"]
atlas = ExtResource("1_gpfj7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1s22"]
atlas = ExtResource("1_gpfj7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xrgi"]
atlas = ExtResource("1_gpfj7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0glo"]
atlas = ExtResource("1_gpfj7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js2fj"]
atlas = ExtResource("1_gpfj7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1gsm"]
atlas = ExtResource("1_gpfj7")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbibn"]
atlas = ExtResource("1_gpfj7")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_35i41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k43nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enufk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gajlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3flo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyq3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df7nl")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oha4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fted")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4s75")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_uqxux")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3n3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s2ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdrah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a41rs")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlsod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdx22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q33c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xkg")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8jof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu42r")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_46up1")
}],
"loop": true,
"name": &"melee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfyfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpcmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0eft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0arnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iqfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dc65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgwrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8py5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4etc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nipqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1s22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xrgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0glo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js2fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1gsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbibn")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_gnnj4"]
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_qs7hh"]
resource_name = "blast"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("stats")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_actionable"
}, {
"args": [true],
"method": &"set_actionable"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"blast", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/Blast")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_check"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitboxes/blast")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable"
}, {
"args": [],
"method": &"disable"
}]
}

[sub_resource type="Animation" id="Animation_s3lax"]
resource_name = "dash"
length = 0.15
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"dash", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Dash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_check"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("stats")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.15, true],
"method": &"set_temp_immortality"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("stats")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.15, false],
"method": &"set_temp_actionable"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("stats")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_dash"
}]
}

[sub_resource type="Animation" id="Animation_i4fx7"]
resource_name = "death"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["death", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Dead")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reload_scene"
}]
}

[sub_resource type="Animation" id="Animation_xo4vd"]
resource_name = "hitBlink"
length = 1.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"hit", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("stats")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.3, true],
"method": &"set_temp_immortality"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/Hit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_check"
}]
}

[sub_resource type="Animation" id="Animation_uygf5"]
resource_name = "melee"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"melee", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Melee")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_check"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitboxes/melee")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"enable"
}, {
"args": [],
"method": &"disable"
}]
}

[sub_resource type="Animation" id="Animation_pyhgf"]
resource_name = "Run"
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"run", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20523"]
_data = {
"RESET": SubResource("Animation_gnnj4"),
"blast": SubResource("Animation_qs7hh"),
"dash": SubResource("Animation_s3lax"),
"death": SubResource("Animation_i4fx7"),
"iFrames": SubResource("Animation_xo4vd"),
"melee": SubResource("Animation_uygf5"),
"run": SubResource("Animation_pyhgf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y2oun"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kydwv"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_buubb"]
animation = &"iFrames"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_epe04"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nsotj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6hdg8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bf6k0"]
states/RESET/node = SubResource("AnimationNodeAnimation_y2oun")
states/RESET/position = Vector2(393, 63)
states/death/node = SubResource("AnimationNodeAnimation_kydwv")
states/death/position = Vector2(780, 63)
states/iFrames/node = SubResource("AnimationNodeAnimation_buubb")
states/iFrames/position = Vector2(688, 170)
states/run/node = SubResource("AnimationNodeAnimation_epe04")
states/run/position = Vector2(483, 170)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_nsotj"), "death", "End", SubResource("AnimationNodeStateMachineTransition_6hdg8")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2cqu"]
radius = 5.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f28k5"]
radius = 6.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6nhx"]
size = Vector2(15, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46oxr"]
size = Vector2(18, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_ygmf4")

[node name="stats" type="Node2D" parent="." groups=["Player"]]
position = Vector2(0, 3)
script = ExtResource("2_iwdy0")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="." groups=["Player"]]
sprite_frames = SubResource("SpriteFrames_35i41")
animation = &"dash"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["Player"]]
libraries = {
"": SubResource("AnimationLibrary_20523")
}
autoplay = "RESET"

[node name="AnimationTree" type="AnimationTree" parent="." groups=["Player"]]
tree_root = SubResource("AnimationNodeStateMachine_bf6k0")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="hurtbox" parent="." groups=["Player"] instance=ExtResource("3_3jhed")]
collision_layer = 32
collision_mask = 4

[node name="box" type="CollisionShape2D" parent="hurtbox" groups=["Player"]]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_i2cqu")

[node name="collision" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_f28k5")

[node name="Rays" type="Node2D" parent="." groups=["Player"]]

[node name="rightWall" type="RayCast2D" parent="Rays" groups=["Player"]]
position = Vector2(6, 4)
target_position = Vector2(2, 0)

[node name="leftWall" type="RayCast2D" parent="Rays" groups=["Player"]]
position = Vector2(-6, 4)
target_position = Vector2(-2, 0)

[node name="leftBump" type="RayCast2D" parent="Rays" groups=["Player"]]
position = Vector2(-4, -4)
target_position = Vector2(0, -9)

[node name="rightBump" type="RayCast2D" parent="Rays" groups=["Player"]]
position = Vector2(4, -4)
target_position = Vector2(0, -9)

[node name="midBump" type="RayCast2D" parent="Rays" groups=["Player"]]
position = Vector2(0, -6)
target_position = Vector2(0, -7)

[node name="Hitboxes" type="Node2D" parent="."]

[node name="melee" type="Area2D" parent="Hitboxes"]
collision_layer = 17
collision_mask = 8
script = ExtResource("5_03dk4")

[node name="shape" type="CollisionShape2D" parent="Hitboxes/melee"]
position = Vector2(14.5, 4)
shape = SubResource("RectangleShape2D_b6nhx")
disabled = true
debug_color = Color(0.805994, 0.371806, 0.494779, 0.42)

[node name="blast" type="Area2D" parent="Hitboxes"]
top_level = true
collision_layer = 17
collision_mask = 8
script = ExtResource("5_03dk4")

[node name="shape" type="CollisionShape2D" parent="Hitboxes/blast"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_46oxr")
disabled = true
debug_color = Color(0.607717, 0.533734, 0.236303, 0.42)

[node name="Timers" type="Node" parent="." groups=["Player"]]

[node name="DashResetTimer" type="Timer" parent="Timers" groups=["Player"]]
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers" groups=["Player"]]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" groups=["Player"]]
wait_time = 0.1
one_shot = true

[node name="KickTimer" type="Timer" parent="Timers" groups=["Player"]]
wait_time = 0.2
one_shot = true

[node name="StateMachine" type="Node" parent="." groups=["Player"]]
script = ExtResource("6_vlsyt")

[node name="Airborne" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("11_rdxji")

[node name="Blast" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("8_mk7im")

[node name="Dash" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("15_mr725")

[node name="Dead" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("12_ex2rv")

[node name="Hit" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("14_fmnic")

[node name="Idle" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("7_qyw7l")

[node name="Jump" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("15_t8mmb")

[node name="Melee" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("9_dav7q")

[node name="OnWall" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("10_wy3i6")

[node name="Run" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("8_5mwc2")

[node name="Spawn" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("13_scs5x")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="health_changed" from="stats" to="." method="_on_health_changed"]
[connection signal="health_changed" from="stats" to="." method="_on_stats_health_changed"]
[connection signal="health_changed" from="stats" to="StateMachine" method="_on_health_changed"]
[connection signal="health_changed" from="stats" to="StateMachine/Hit" method="_on_stats_health_changed"]
[connection signal="health_zero" from="stats" to="StateMachine" method="_on_health_zero"]
[connection signal="health_zero" from="stats" to="StateMachine" method="_on_stats_health_zero"]
[connection signal="area_entered" from="Hitboxes/blast" to="StateMachine/Blast" method="_on_blast_area_entered"]
[connection signal="timeout" from="Timers/DashResetTimer" to="StateMachine/Dash" method="_on_dash_reset_timer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="StateMachine/Airborne" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="StateMachine/Airborne" method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="Timers/KickTimer" to="StateMachine/Jump" method="_on_kick_timer_timeout"]
